# YuhHearDem3

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  build_knowledge_graph.py  db.sh  demo_trace.py  docker-compose.yml  order.txt  pyproject.toml  requirements.txt  transcribe.py
api/: search_api.py
config/: kg_predicates.json
deploy/: deploy.sh  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.postgres.yml  postgres.Dockerfile
docs/: CEREBRAS_KG_EXTRACTION_PLAN.md  CHAT_TRACE.md  CODE_MAP_AND_REVIEW.md  COMPLETE_GUIDE.md  DATE_NORMALIZATION.md  KG_CLEANUP_RUNBOOK.md  KG_PLAN.md  KG_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_SEARCH_SYSTEM.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
lib/: advanced_search_features.py  chat_agent.py  chat_agent_v2.py  gemini_finish_reason.py  google_client.py  id_generators.py  kg_agent_loop.py  kg_hybrid_graph_rag.py  roles.py
schema/: init.sql
scripts/: __init__.py  backfill_speaker_video_roles.py  benchmark_kg_window_configs.py  clean_transcript_timestamps.py  clear_kg.py  compare_kg_models.py  cron_transcription.py  deploy.sh  export_order_paper.py  flag_speaker_mismatches.py  generate_speaker_overrides.py  ingest_bills.py  ingest_knowledge_graph.py  ingest_order_paper.py  ingest_order_paper_pdf.py  ingest_transcript_json.py  kg_cleanup_pass.py  kg_export_html.py  kg_extract_from_video.py  kg_seed_base.py  kg_sync_memgraph.py  list_channel_videos.py  list_genai_models.py  match_order_papers_to_videos.py  (+5 more)
tests/: conftest.py  (+56 more)
(+78 files in other folders)
